@@ -26,12 +26,20 @@ class ExcelConversionServiceTest {
 
     private static final String HEADER1 = "header1";
     private static final String HEADER2 = "header2";
+    private static final String HEADER3 = "header3";
+    private static final String HEADER4 = "header4";
     private static final String ROW1A = "Row1a";
     private static final String ROW1B = "Row1b";
+    private static final String ROW1C = "Row1c";
+    private static final String ROW1D = "Row1d";
     private static final String ROW2A = "Row2a";
     private static final String ROW2B = "Row2b";
+    private static final String ROW2C = "Row2c";
+    private static final String ROW2D = "Row2d";
     private static final String ROW3A = "Row3a";
     private static final String ROW3B = "Row3b";
+    private static final String ROW3C = "Row3c";
+    private static final String ROW3D = "Row3d";
 
     private final ExcelConversionService excelConversionService = new ExcelConversionService();
 
@@ -46,7 +54,7 @@ class ExcelConversionServiceTest {
             List<Map<String, String>> results = OBJECT_MAPPER.readValue(json, new TypeReference<>(){});
 
             SoftAssertions softly = new SoftAssertions();
-            Map<String, String> firstRow = results.get(0);
+            Map<String, String> firstRow = results.getFirst();
 
             softly.assertThat(firstRow.get(HEADER1))
                 .as(CELL_MATCH_MESSAGE)
@@ -91,7 +99,7 @@ class ExcelConversionServiceTest {
             List<Map<String, String>> results = OBJECT_MAPPER.readValue(json, new TypeReference<>(){});
 
             SoftAssertions softly = new SoftAssertions();
-            Map<String, String> firstRow = results.get(0);
+            Map<String, String> firstRow = results.getFirst();
 
             softly.assertThat(firstRow.get(HEADER1))
                 .as(CELL_EMPTY_MESSAGE)
@@ -136,7 +144,7 @@ class ExcelConversionServiceTest {
             List<Map<String, String>> results = OBJECT_MAPPER.readValue(json, new TypeReference<>(){});
 
             SoftAssertions softly = new SoftAssertions();
-            Map<String, String> firstRow = results.get(0);
+            Map<String, String> firstRow = results.getFirst();
 
             softly.assertThat(firstRow.get(HEADER1))
                 .as(CELL_MATCH_MESSAGE)
@@ -181,7 +189,7 @@ class ExcelConversionServiceTest {
             List<Map<String, String>> results = OBJECT_MAPPER.readValue(json, new TypeReference<>(){});
 
             SoftAssertions softly = new SoftAssertions();
-            Map<String, String> firstRow = results.get(0);
+            Map<String, String> firstRow = results.getFirst();
 
             softly.assertThat(firstRow.get("date"))
                 .as(CELL_MATCH_MESSAGE)
@@ -234,7 +242,7 @@ class ExcelConversionServiceTest {
 
             SoftAssertions softly = new SoftAssertions();
 
-            Map<String, String> firstRow = results.get(0);
+            Map<String, String> firstRow = results.getFirst();
 
             softly.assertThat(firstRow.get(HEADER1))
                 .as(CELL_EMPTY_MESSAGE)
@@ -261,4 +269,53 @@ class ExcelConversionServiceTest {
             softly.assertAll();
         }
     }
+
+    @Test
+    void shouldConvertExcelTableWithMultipleTabsToJsonString() throws IOException {
+        try (InputStream inputStream = this.getClass()
+            .getClassLoader()
+            .getResourceAsStream("excel/tableWithTwoTabs.xlsx")) {
+
+            MultipartFile file = new MockMultipartFile(FILE, FILE_NAME, FILE_TYPE, IOUtils.toByteArray(inputStream));
+
+            String results = excelConversionService.convert(file);
+
+            Map<String, List<Map<String, String>>> sheetData = OBJECT_MAPPER.readValue(
+                results, new TypeReference<>() {}
+            );
+
+            List<Map<String, String>> sheet1 = sheetData.get("sheet1");
+
+            SoftAssertions softly = new SoftAssertions();
+
+            Map<String, String> firstRow = sheet1.getFirst();
+            softly.assertThat(firstRow.get(HEADER1)).as(CELL_MATCH_MESSAGE).isEqualTo(ROW1A);
+            softly.assertThat(firstRow.get(HEADER2)).as(CELL_MATCH_MESSAGE).isEqualTo(ROW1B);
+
+            Map<String, String> secondRow = sheet1.get(1);
+            softly.assertThat(secondRow.get(HEADER1)).as(CELL_MATCH_MESSAGE).isEqualTo(ROW2A);
+            softly.assertThat(secondRow.get(HEADER2)).as(CELL_MATCH_MESSAGE).isEqualTo(ROW2B);
+
+            Map<String, String> thirdRow = sheet1.get(2);
+            softly.assertThat(thirdRow.get(HEADER1)).as(CELL_MATCH_MESSAGE).isEqualTo(ROW3A);
+            softly.assertThat(thirdRow.get(HEADER2)).as(CELL_MATCH_MESSAGE).isEqualTo(ROW3B);
+
+            List<Map<String, String>> sheet2 = sheetData.get("sheet2");
+
+            Map<String, String> sheetTwoFirstRow = sheet2.getFirst();
+            softly.assertThat(sheetTwoFirstRow.get(HEADER3)).as(CELL_MATCH_MESSAGE).isEqualTo(ROW1C);
+            softly.assertThat(sheetTwoFirstRow.get(HEADER4)).as(CELL_MATCH_MESSAGE).isEqualTo(ROW1D);
+
+            Map<String, String> sheetTwoSecondRow = sheet2.get(1);
+            softly.assertThat(sheetTwoSecondRow.get(HEADER3)).as(CELL_MATCH_MESSAGE).isEqualTo(ROW2C);
+            softly.assertThat(sheetTwoSecondRow.get(HEADER4)).as(CELL_MATCH_MESSAGE).isEqualTo(ROW2D);
+
+            Map<String, String> sheetTwoThirdRow = sheet2.get(2);
+            softly.assertThat(sheetTwoThirdRow.get(HEADER3)).as(CELL_MATCH_MESSAGE).isEqualTo(ROW3C);
+            softly.assertThat(sheetTwoThirdRow.get(HEADER4)).as(CELL_MATCH_MESSAGE).isEqualTo(ROW3D);
+
+            softly.assertAll();
+        }
+    }
+
 }
