@@ -61,6 +61,7 @@ class SscsDailyHearingListFileConverterTest {
     private static final String IMPORTANT_INFORMATION_MESSAGE = "Important information heading does not match";
     private static final String BODY_MESSAGE = "Body does not match";
     private static final String TABLE_HEADERS_MESSAGE = "Table headers does not match";
+    private static final String TABLE_CONTENT_MESSAGE = "Table content does not match";
 
     private final NonStrategicListFileConverter converter = new NonStrategicListFileConverter();
 
@@ -173,7 +174,7 @@ class SscsDailyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Last updated 20 January 2025 at 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Important information");
 
@@ -216,6 +217,22 @@ class SscsDailyHearingListFileConverterTest {
                 "Panel",
                 "FTA/Respondent",
                 "Additional information"
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(9)
+            .extracting(Element::text)
+            .containsExactly(
+                "Venue 1",
+                "1234567",
+                "Directions",
+                "Appellant 1",
+                "Courtroom 1",
+                "10:30am",
+                "Panel 1",
+                "Respondent 1",
+                "Additional information 1"
             );
 
         softly.assertAll();
@@ -262,7 +279,7 @@ class SscsDailyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Diweddarwyd ddiwethaf 20 January 2025 am 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Gwybodaeth bwysig");
 
@@ -304,6 +321,22 @@ class SscsDailyHearingListFileConverterTest {
                 "Panel",
                 "FTA/Atebydd",
                 "Gwybodaeth ychwanegol"
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(9)
+            .extracting(Element::text)
+            .containsExactly(
+                "Venue 1",
+                "1234567",
+                "Directions",
+                "Appellant 1",
+                "Courtroom 1",
+                "10:30am",
+                "Panel 1",
+                "Respondent 1",
+                "Additional information 1"
             );
 
         softly.assertAll();
