@@ -55,6 +55,9 @@ class UtIacStatutoryAppealsDailyHearingListFileConverterTest {
     private static final String OBSERVE_HEARING_WELSH = "Arsylwi gwrandawiad llys neu dribiwnlys fel newyddiadurwr, "
         + "ymchwilydd neu aelod o'r cyhoedd";
 
+    private static final String SUBSTANTIVE = "Substantive";
+    private static final String HEARING_VENUE = "This is a venue name";
+
     private static final String HEADER_ELEMENT = "page-heading";
     private static final String LIST_DATE_ELEMENT = "list-date";
     private static final String LAST_UPDATED_DATE_ELEMENT = "last-updated-date";
@@ -70,6 +73,7 @@ class UtIacStatutoryAppealsDailyHearingListFileConverterTest {
     private static final String IMPORTANT_INFORMATION_MESSAGE = "Important information heading does not match";
     private static final String BODY_MESSAGE = "Body does not match";
     private static final String TABLE_HEADERS_MESSAGE = "Table headers does not match";
+    private static final String TABLE_CONTENT_MESSAGE = "Table content does not match";
 
     private final NonStrategicListFileConverter converter = new NonStrategicListFileConverter();
 
@@ -123,7 +127,7 @@ class UtIacStatutoryAppealsDailyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Last updated 20 January 2025 at 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Important information");
 
@@ -153,6 +157,29 @@ class UtIacStatutoryAppealsDailyHearingListFileConverterTest {
                 HEARING_TYPE,
                 "Location",
                 ADDITIONAL_INFORMATION
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(16)
+            .extracting(Element::text)
+            .containsExactly(
+                "10:30am",
+                "Appellant A",
+                "Rep A",
+                "1234",
+                "Judge A",
+                SUBSTANTIVE,
+                HEARING_VENUE,
+                "This is additional information",
+                "11am",
+                "Appellant B",
+                "Rep B",
+                "1235",
+                "Judge B",
+                SUBSTANTIVE,
+                HEARING_VENUE,
+                "This is another additional information"
             );
 
         softly.assertAll();
@@ -199,7 +226,7 @@ class UtIacStatutoryAppealsDailyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Diweddarwyd ddiwethaf 20 January 2025 am 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Gwybodaeth bwysig");
 
@@ -229,6 +256,29 @@ class UtIacStatutoryAppealsDailyHearingListFileConverterTest {
                 HEARING_TYPE_WELSH,
                 VENUE_WELSH,
                 ADDITIONAL_INFORMATION_WELSH
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(16)
+            .extracting(Element::text)
+            .containsExactly(
+                "10:30am",
+                "Appellant A",
+                "Rep A",
+                "1234",
+                "Judge A",
+                SUBSTANTIVE,
+                HEARING_VENUE,
+                "This is additional information",
+                "11am",
+                "Appellant B",
+                "Rep B",
+                "1235",
+                "Judge B",
+                SUBSTANTIVE,
+                HEARING_VENUE,
+                "This is another additional information"
             );
 
         softly.assertAll();
